[package]
name = "ultra-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Utilities for Rust"
repository = "https://github.com/BlackGlory/ultra-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
